# postgrest-auth

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  security.py
deploy/: compose.elitedesk.yaml
tests/: test_token.py
