[project]
name = "postgrest-auth"
version = "0.1.0"
description = "Shared, app-agnostic JWT auth service for PostgREST (one per server, not per app)."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyjwt",
    "bcrypt",
    "psycopg2-binary",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
# main.py lives at the repo root (single-file service); put it on the path
pythonpath = ["."]
